# pyfi

./: .gitignore  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml
pyfi/: accounting.py
pyfi/types/: currency.py  ratios.py
tests/: test_accounting.py
